# LY-Project-C87

./: .cursorrules  .dockerignore  .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  hive.ps1  package-lock.json  package.json  quickstart.ps1  quickstart.sh  teamagents.ps1  tsconfig.base.json
core/: .gitignore  .mcp.json  MCP_INTEGRATION_GUIDE.md  MCP_SERVER_GUIDE.md  README.md  antigravity_auth.py  codex_oauth.py  pyproject.toml  setup_mcp.sh
core/examples/: mcp_integration_example.py
core/framework/: __init__.py  __main__.py  cli.py  config.py
core/framework/agents/: __init__.py  discovery.py  worker_memory.py
core/framework/credentials/: __init__.py  key_storage.py  models.py  setup.py  storage.py  store.py  validation.py
core/framework/debugger/: cli.py
core/framework/graph/: client_io.py  conversation.py  gcu.py  (+9 more)
core/frontend/: index.html  package-lock.json  package.json  tsconfig.node.json
core/tests/: __init__.py  debug_codex_stream.py  debug_codex_verbose.py  test_agent_runner_mcp_registry.py  test_antigravity_eventloop.py  test_capabilities.py  test_check_llm_key_openrouter.py  test_cli_entry_point.py  test_client_facing_validation.py  test_codex_eventloop.py  test_codex_oauth.py  test_config.py  test_context_handoff.py  test_continuous_conversation.py  test_conversation_judge.py  test_credential_bootstrap.py  test_default_skills.py  test_event_loop_integration.py  test_event_loop_node.py  test_event_loop_wiring.py  test_execution_stream.py  test_executor_feedback_edges.py  test_fanout.py  test_find_json_hardened.py  test_flowchart_utils.py  test_graph_executor.py  test_hallucination_detection.py  test_litellm_provider.py  test_llm_judge.py  test_mcp_client.py  test_mcp_registry.py  test_mcp_registry_cli.py  test_mcp_server.py  test_node_conversation.py  test_node_json_performance.py  test_orchestrator.py  test_path_traversal_fix.py  test_run.py  test_runner_api_key_env_var.py  test_runner_cli_frontend.py  (+21 more)
tools/src/: pyproject.toml
(+633 files in other folders)
